fixes grid spacing

--- a/cac-farmshop-client/src/index.css
+++ b/cac-farmshop-client/src/index.css
@@ -1,3 +1,17 @@
+.header-bottom {
+  margin-bottom: 40px;
+}
+
+.dropdown {
+  top: 21px;
+  width: 170px;
+  position: relative;
+}
+
+.Farm-Goods-Container {
+  width: 75%;
+}
+
 .test-container {
   height: 300px;
   position: relative;
@@ -18,7 +32,7 @@
 .header-one {
   font:  normal 37px / 39px "Playfair Display";
   font-weight: 300;
-  padding: 30px;
+  padding-top: 30px;
 }
 
 .mobile-mini-widgets {
@@ -166,7 +180,7 @@ body {
 
 .page-tree {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 190px 300px auto;
   padding: 10px;
 }
 
@@ -205,13 +219,14 @@ body {
 }
 
 .CartsCard {
-  width: 90%;
-  height: 25%;
-  float: left;
-  margin: 6px;
-  background: whitesmoke;
+  width: 75%;
+  height: 40%;
+  float: right;
+  margin: 45px 20px 0px 0px;
+  background: palegoldenrod;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  font:  normal  17px / 21px "Laksaman";
 }
 
 .CartsCard:hover {
